# controllers/professionalController.js
@@ -1,28 +1,70 @@
 import { hashGenerate } from "../hash/hashUtils.js";
+import { z } from "zod";
 import ProfessionalEntity from "../entities/professionalEntity.js";
 import ProfessionalRepository from "../repositories/ProfessionalRepository.js";
 
 export default class ProfessionalController {
-  #repoUsuario;
+  #professionalRepository;
+
   constructor() {
-    this.#repoUsuario = new ProfessionalRepository();
+    this.#professionalRepository = new ProfessionalRepository();
+  }
+
+  //colocar em ProfessionalEntity
+  async dataValidate({ params }) {
+    const Profesionals = z.object({
+      name: z.string().min(3, "O nome deve ter pelo menos 3 caracteres"),
+      cpf: z.string().length(11, "O CPF deve ter 11 caracteres"),
+      email: z.string().email("Campo de e-mail inválido"),
+      dateOfBirth: z.string().regex(/^\d{2}-\d{2}-\d{4}$/, "Data de nascimento inválida"),
+      password: z.string().min(3, "A senha deve ter pelo menos 6 caracteres"),
+
+    })
+
+    if (!Profesionals.parse(params).success) {
+      return res.status(400).json({ error: "Dados inválidos." });
+    }
+
+    return params;
   }
 
   async create(req, res) {
-    let { email, nome, senha } = req.body;
-    if (email && nome && senha) {
-      let passwordHash = await hashGenerate(senha);
-      let usuario = new ProfessionalEntity(0, email, nome, passwordHash);
-      if (await this.#repoUsuario.create(usuario))
-        return res.status(201).json({ msg: "Usuario criado!" });
-      else throw new Error("Erro ao cadastrar usuario no banco de dados");
-    } else return res.status(400).json({ msg: "Parâmetros invalidos!" });
+    let { name, cpf, email, dateOfBirth, password, position, } = req.body;
+
+    console.log("Dados recebidos:", req.body);
+
+    let checkInputData = await this.dataValidate({ name, cpf, email, dateOfBirth, password });
+
+    if (checkInputData.error || !position) {
+      return res.status(400).json({ error: checkInputData.error });
+    }
+
+    let hashedPassword = await hashGenerate(password);
+
+    let professionalUser = new ProfessionalEntity(
+      0,
+      name,
+      cpf,
+      email,
+      dateOfBirth,
+      hashedPassword,
+      position,
+    );
+
+    let createdProfessional = await this.#professionalRepository.create(professionalUser);
+
+    if (createdProfessional) {
+      return res.status(201).json({ msg: "Usuario criado!" });
+    }
+
+    else throw new Error("Erro ao cadastrar usuario no banco de dados");
+
   }
 
-  async perfil (req,res) {
-    let perfil = await this.#repoUsuario.perfil(req.usuarioLogado.id);
-    if(perfil) 
-      return res.status(200).json(perfil);
+  async perfil(req, res) {
+    // let perfil = await this.#repoUsuario.perfil(req.usuarioLogado.id);
+    // if (perfil)
+    //   return res.status(200).json(perfil);
 
   }
 }
